--- a/injectable_generator/pubspec.yaml
+++ b/injectable_generator/pubspec.yaml
@@ -14,9 +14,8 @@ dependencies:
   analyzer: ">=6.4.1 <7.0.0"
   code_builder: ^4.10.0
   dart_style: ^2.0.3
-  injectable:
-    ^2.3.4
-#    path: ../injectable
+  injectable: 
+    path: ../injectable/
   collection: ^1.17.1
   recase: ^4.1.0
   meta: ^1.9.1
